  Update rake checks
v0.0.4:
  Update to jdk 1.7
v0.0.3:
  Initial public release