@@ -1,3 +1,4 @@
+  Merge java::devel with java class
   Update rake checks
 v0.0.4:
   Update to jdk 1.7
